[gd_scene load_steps=32 format=2]

[ext_resource path="res://resources/Grass Top.png" type="Texture" id=1]
[ext_resource path="res://resources/Grass Full.png" type="Texture" id=2]
[ext_resource path="res://resources/Garden Edge DR.png" type="Texture" id=3]
[ext_resource path="res://resources/Dirt.png" type="Texture" id=4]
[ext_resource path="res://resources/Garden Edge UR.png" type="Texture" id=5]
[ext_resource path="res://resources/Garden Edge UL.png" type="Texture" id=6]
[ext_resource path="res://resources/Garden Edge DL.png" type="Texture" id=7]
[ext_resource path="res://resources/Garden Corner U.png" type="Texture" id=8]
[ext_resource path="res://resources/Garden Corner R.png" type="Texture" id=9]
[ext_resource path="res://resources/Garden Corner L.png" type="Texture" id=10]
[ext_resource path="res://resources/Garden Corner D.png" type="Texture" id=11]
[ext_resource path="res://resources/Inventory.png" type="Texture" id=12]
[ext_resource path="res://FollowCursor.gd" type="Script" id=13]
[ext_resource path="res://resources/Inventory_Slot.png" type="Texture" id=14]
[ext_resource path="res://resources/Inventory_Hover.png" type="Texture" id=15]
[ext_resource path="res://resources/Inventory_Select.png" type="Texture" id=16]
[ext_resource path="res://resources/Lily_Seed.png" type="Texture" id=17]
[ext_resource path="res://FlowerTrigger.gd" type="Script" id=18]
[ext_resource path="res://resources/Hole.png" type="Texture" id=19]
[ext_resource path="res://resources/stages.png" type="Texture" id=20]
[ext_resource path="res://resources/Nothing.png" type="Texture" id=21]
[ext_resource path="res://resources/Daisy_Seed.png" type="Texture" id=22]
[ext_resource path="res://resources/Sunflower_Seed.png" type="Texture" id=23]
[ext_resource path="res://resources/Tulip_Pod.png" type="Texture" id=24]
[ext_resource path="res://resources/TileMap_Hover.png" type="Texture" id=25]
[ext_resource path="res://Hover.gd" type="Script" id=26]
[ext_resource path="res://resources/Shovel.png" type="Texture" id=27]
[ext_resource path="res://resources/Shovel_Hover.png" type="Texture" id=28]
[ext_resource path="res://resources/Shovel_Select.png" type="Texture" id=29]
[ext_resource path="res://Shovel.gd" type="Script" id=30]

[sub_resource type="TileSet" id=1]
0/name = "Grass Top.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Grass Full.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Dirt.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Garden Corner D.png 3"
3/texture = ExtResource( 11 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Garden Corner L.png 4"
4/texture = ExtResource( 10 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Garden Corner R.png 5"
5/texture = ExtResource( 9 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Garden Corner U.png 6"
6/texture = ExtResource( 8 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Garden Edge DL.png 7"
7/texture = ExtResource( 7 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Garden Edge DR.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Garden Edge UL.png 9"
9/texture = ExtResource( 6 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Garden Edge UR.png 10"
10/texture = ExtResource( 5 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "TileMap_Hover.png 11"
11/texture = ExtResource( 25 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 32, 16 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
13/name = "stages.png 13"
13/texture = ExtResource( 20 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 1, 1, 32, 44 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
16/name = "Hole.png 16"
16/texture = ExtResource( 19 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 0, 0, 1 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "Hole.png 17"
17/texture = ExtResource( 19 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 0, 2, 32, 42 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "stages.png 18"
18/texture = ExtResource( 20 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 66, 45, 0, 0 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0
19/name = "stages.png 19"
19/texture = ExtResource( 20 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 34, 1, 32, 44 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape_one_way = false
19/shape_one_way_margin = 0.0
19/shapes = [  ]
19/z_index = 0
20/name = "stages.png 20"
20/texture = ExtResource( 20 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 83, 37, 0, 0 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape_one_way = false
20/shape_one_way_margin = 0.0
20/shapes = [  ]
20/z_index = 0
21/name = "stages.png 21"
21/texture = ExtResource( 20 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 100, 1, 32, 44 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape_one_way = false
21/shape_one_way_margin = 0.0
21/shapes = [  ]
21/z_index = 0
22/name = "stages.png 22"
22/texture = ExtResource( 20 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 1, 46, 32, 44 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = 0
23/name = "stages.png 23"
23/texture = ExtResource( 20 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 65, 89, 1, 0 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape_one_way = false
23/shape_one_way_margin = 0.0
23/shapes = [  ]
23/z_index = 0
24/name = "stages.png 24"
24/texture = ExtResource( 20 )
24/tex_offset = Vector2( 0, 0 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 34, 46, 32, 44 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shape_offset = Vector2( 0, 0 )
24/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
24/shape_one_way = false
24/shape_one_way_margin = 0.0
24/shapes = [  ]
24/z_index = 0
25/name = "stages.png 25"
25/texture = ExtResource( 20 )
25/tex_offset = Vector2( 0, 0 )
25/modulate = Color( 1, 1, 1, 1 )
25/region = Rect2( 67, 46, 32, 44 )
25/tile_mode = 0
25/occluder_offset = Vector2( 0, 0 )
25/navigation_offset = Vector2( 0, 0 )
25/shape_offset = Vector2( 0, 0 )
25/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
25/shape_one_way = false
25/shape_one_way_margin = 0.0
25/shapes = [  ]
25/z_index = 0
26/name = "stages.png 26"
26/texture = ExtResource( 20 )
26/tex_offset = Vector2( 0, 0 )
26/modulate = Color( 1, 1, 1, 1 )
26/region = Rect2( 100, 46, 32, 44 )
26/tile_mode = 0
26/occluder_offset = Vector2( 0, 0 )
26/navigation_offset = Vector2( 0, 0 )
26/shape_offset = Vector2( 0, 0 )
26/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
26/shape_one_way = false
26/shape_one_way_margin = 0.0
26/shapes = [  ]
26/z_index = 0
27/name = "stages.png 27"
27/texture = ExtResource( 20 )
27/tex_offset = Vector2( 0, 0 )
27/modulate = Color( 1, 1, 1, 1 )
27/region = Rect2( 1, 91, 32, 44 )
27/tile_mode = 0
27/occluder_offset = Vector2( 0, 0 )
27/navigation_offset = Vector2( 0, 0 )
27/shape_offset = Vector2( 0, 0 )
27/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
27/shape_one_way = false
27/shape_one_way_margin = 0.0
27/shapes = [  ]
27/z_index = 0
28/name = "stages.png 28"
28/texture = ExtResource( 20 )
28/tex_offset = Vector2( 0, 0 )
28/modulate = Color( 1, 1, 1, 1 )
28/region = Rect2( 34, 91, 32, 44 )
28/tile_mode = 0
28/occluder_offset = Vector2( 0, 0 )
28/navigation_offset = Vector2( 0, 0 )
28/shape_offset = Vector2( 0, 0 )
28/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
28/shape_one_way = false
28/shape_one_way_margin = 0.0
28/shapes = [  ]
28/z_index = 0
29/name = "stages.png 29"
29/texture = ExtResource( 20 )
29/tex_offset = Vector2( 0, 0 )
29/modulate = Color( 1, 1, 1, 1 )
29/region = Rect2( 67, 91, 32, 44 )
29/tile_mode = 0
29/occluder_offset = Vector2( 0, 0 )
29/navigation_offset = Vector2( 0, 0 )
29/shape_offset = Vector2( 0, 0 )
29/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
29/shape_one_way = false
29/shape_one_way_margin = 0.0
29/shapes = [  ]
29/z_index = 0
30/name = "stages.png 30"
30/texture = ExtResource( 20 )
30/tex_offset = Vector2( 0, 0 )
30/modulate = Color( 1, 1, 1, 1 )
30/region = Rect2( 100, 91, 32, 44 )
30/tile_mode = 0
30/occluder_offset = Vector2( 0, 0 )
30/navigation_offset = Vector2( 0, 0 )
30/shape_offset = Vector2( 0, 0 )
30/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
30/shape_one_way = false
30/shape_one_way_margin = 0.0
30/shapes = [  ]
30/z_index = 0
31/name = "stages.png 31"
31/texture = ExtResource( 20 )
31/tex_offset = Vector2( 0, 0 )
31/modulate = Color( 1, 1, 1, 1 )
31/region = Rect2( 1, 136, 32, 44 )
31/tile_mode = 0
31/occluder_offset = Vector2( 0, 0 )
31/navigation_offset = Vector2( 0, 0 )
31/shape_offset = Vector2( 0, 0 )
31/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
31/shape_one_way = false
31/shape_one_way_margin = 0.0
31/shapes = [  ]
31/z_index = 0
32/name = "stages.png 32"
32/texture = ExtResource( 20 )
32/tex_offset = Vector2( 0, 0 )
32/modulate = Color( 1, 1, 1, 1 )
32/region = Rect2( 34, 136, 32, 44 )
32/tile_mode = 0
32/occluder_offset = Vector2( 0, 0 )
32/navigation_offset = Vector2( 0, 0 )
32/shape_offset = Vector2( 0, 0 )
32/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
32/shape_one_way = false
32/shape_one_way_margin = 0.0
32/shapes = [  ]
32/z_index = 0
33/name = "stages.png 33"
33/texture = ExtResource( 20 )
33/tex_offset = Vector2( 0, 0 )
33/modulate = Color( 1, 1, 1, 1 )
33/region = Rect2( 67, 136, 32, 44 )
33/tile_mode = 0
33/occluder_offset = Vector2( 0, 0 )
33/navigation_offset = Vector2( 0, 0 )
33/shape_offset = Vector2( 0, 0 )
33/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
33/shape_one_way = false
33/shape_one_way_margin = 0.0
33/shapes = [  ]
33/z_index = 0
34/name = "stages.png 34"
34/texture = ExtResource( 20 )
34/tex_offset = Vector2( 0, 0 )
34/modulate = Color( 1, 1, 1, 1 )
34/region = Rect2( 100, 136, 32, 44 )
34/tile_mode = 0
34/occluder_offset = Vector2( 0, 0 )
34/navigation_offset = Vector2( 0, 0 )
34/shape_offset = Vector2( 0, 0 )
34/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
34/shape_one_way = false
34/shape_one_way_margin = 0.0
34/shapes = [  ]
34/z_index = 0
35/name = "stages.png 35"
35/texture = ExtResource( 20 )
35/tex_offset = Vector2( 0, 0 )
35/modulate = Color( 1, 1, 1, 1 )
35/region = Rect2( 67, 1, 32, 44 )
35/tile_mode = 0
35/occluder_offset = Vector2( 0, 0 )
35/navigation_offset = Vector2( 0, 0 )
35/shape_offset = Vector2( 0, 0 )
35/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
35/shape_one_way = false
35/shape_one_way_margin = 0.0
35/shapes = [  ]
35/z_index = 0

[node name="Node2D" type="Node2D"]

[node name="Game" type="Node2D" parent="."]

[node name="Grass" type="TileMap" parent="Game"]
position = Vector2( 0, 16 )
scale = Vector2( 4, 4 )
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 16 )
cell_tile_origin = 1
cell_y_sort = true
show_collision = true
format = 1
tile_data = PoolIntArray( -851941, 0, 0, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -262136, 1, 0, -262135, 1, 0, -262134, 1, 0, -262133, 1, 0, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -196599, 1, 0, -196598, 1, 0, -196597, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0 )

[node name="Garden" type="TileMap" parent="Game"]
position = Vector2( 0, 16 )
scale = Vector2( 4, 4 )
z_index = 1
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 16 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -851941, 0, 0, -196603, 6, 0, -196602, 10, 0, -196601, 10, 0, -196600, 5, 0, -131067, 9, 0, -131066, 1, 0, -131065, 1, 0, -131064, 8, 0, -65531, 9, 0, -65530, 1, 0, -65529, 1, 0, -65528, 8, 0, 5, 4, 0, 6, 7, 0, 7, 7, 0, 8, 3, 0 )

[node name="Hover" type="TileMap" parent="Game"]
position = Vector2( 0, 16 )
scale = Vector2( 4, 4 )
z_index = 1
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 16 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -851941, 0, 0 )
script = ExtResource( 26 )

[node name="Flowers" type="TileMap" parent="Game"]
position = Vector2( 0, 16 )
scale = Vector2( 4, 4 )
z_index = 1
mode = 1
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 16 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -851941, 0, 0, -327677, 12, 0, -327667, 12, 0 )
script = ExtResource( 18 )

[node name="Inventory" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Inventory"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 477.0
margin_right = 186.0
margin_bottom = 524.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
texture = ExtResource( 12 )

[node name="ItemDisp" type="GridContainer" parent="Inventory"]
margin_left = 49.0
margin_top = 420.0
margin_right = 189.0
margin_bottom = 488.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
columns = 4

[node name="InvSlots" type="GridContainer" parent="Inventory"]
margin_left = 46.0
margin_top = 492.0
margin_right = 186.0
margin_bottom = 524.0
rect_scale = Vector2( 2, 2 )
mouse_filter = 2
columns = 4

[node name="TextureButton1" type="TextureButton" parent="Inventory/InvSlots"]
margin_right = 32.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
action_mode = 0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 15 )

[node name="TextureRect3" type="TextureRect" parent="Inventory/InvSlots/TextureButton1"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 22 )

[node name="TextureButton2" type="TextureButton" parent="Inventory/InvSlots"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 15 )

[node name="TextureRect2" type="TextureRect" parent="Inventory/InvSlots/TextureButton2"]
margin_left = 1.5
margin_top = 2.0
margin_right = 33.5
margin_bottom = 34.0
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 17 )

[node name="TextureButton3" type="TextureButton" parent="Inventory/InvSlots"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 15 )

[node name="TextureRect3" type="TextureRect" parent="Inventory/InvSlots/TextureButton3"]
margin_left = 1.5
margin_top = 2.0
margin_right = 33.5
margin_bottom = 35.0
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 23 )

[node name="TextureButton4" type="TextureButton" parent="Inventory/InvSlots"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 15 )

[node name="TextureRect4" type="TextureRect" parent="Inventory/InvSlots/TextureButton4"]
margin_left = 1.5
margin_top = 0.5
margin_right = 33.5
margin_bottom = 32.5
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 24 )

[node name="Shovel" type="TextureButton" parent="Inventory"]
margin_left = 905.0
margin_top = 481.0
margin_right = 927.0
margin_bottom = 503.0
rect_scale = Vector2( 4, 4 )
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 28 )
script = ExtResource( 30 )

[node name="Follow" type="Node2D" parent="."]
z_index = 2

[node name="FollowCursor" type="Sprite" parent="Follow"]
scale = Vector2( 4, 4 )
texture = ExtResource( 21 )
script = ExtResource( 13 )

[connection signal="pressed" from="Inventory/InvSlots/TextureButton1" to="Follow/FollowCursor" method="_on_TextureButton1_pressed"]
[connection signal="pressed" from="Inventory/InvSlots/TextureButton2" to="Follow/FollowCursor" method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="Inventory/InvSlots/TextureButton3" to="Follow/FollowCursor" method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="Inventory/InvSlots/TextureButton4" to="Follow/FollowCursor" method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="Inventory/Shovel" to="Game/Flowers" method="_on_Shovel_pressed"]
